--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
   "dependencies": {
     "command-line-args": "^0.5.9",
     "fs-extra": "^0.22.1",
+    "glob": "^5.0.14",
+    "heroku-client": "^2.0.0",
+    "mkdirp": "^0.5.1",
     "mocha": "^2.2.5"
   }
 }
