--- a/package.json
+++ b/package.json
@@ -31,11 +31,14 @@
     "donejs-deploy": "bin/donejs-deploy"
   },
   "dependencies": {
+    "aws-sdk": "^2.1.40",
     "command-line-args": "^0.5.9",
     "fs-extra": "^0.22.1",
     "glob": "^5.0.14",
     "mkdirp": "^0.5.1",
     "mocha": "^2.2.5",
-    "packpath": "^0.1.0"
+    "node-mime": "^1.0.0",
+    "packpath": "^0.1.0",
+    "q": "^1.4.1"
   }
 }
