--- a/package.json
+++ b/package.json
@@ -36,9 +36,9 @@
     "fs-extra": "^0.22.1",
     "glob": "^5.0.14",
     "lodash": "^3.10.0",
+    "mime": "^1.3.4",
     "mkdirp": "^0.5.1",
     "mocha": "^2.2.5",
-    "node-mime": "^1.0.0",
     "packpath": "^0.1.0",
     "q": "^1.4.1"
   }
