--- a/package.json
+++ b/package.json
@@ -32,13 +32,13 @@
   },
   "dependencies": {
     "aws-sdk": "^2.1.40",
-    "command-line-args": "^0.5.9",
     "fs-extra": "^0.22.1",
     "glob": "^5.0.14",
     "lodash": "^3.10.0",
     "mime": "^1.3.4",
     "mkdirp": "^0.5.1",
     "mocha": "^2.2.5",
+    "path-parse": "^1.0.5",
     "q": "^1.4.1"
   }
 }
