Fixes #6. config-path is now configPath

--- a/package.json
+++ b/package.json
@@ -40,5 +40,19 @@
     "mocha": "^2.2.5",
     "path-parse": "^1.0.5",
     "q": "^1.4.1"
+  },
+  "donejs": {
+    "deploy": {
+      "dest": "dist/bundles",
+      "glob": "test/assets/**/*.png",
+      "services": {
+        "production": {
+          "type": "s3",
+          "bucket": "donejs.deploy",
+          "configPath": "./aws.s3.json",
+          "default": true
+        }
+      }
+    }
   }
 }
