--- a/package.json
+++ b/package.json
@@ -32,9 +32,10 @@
   },
   "dependencies": {
     "aws-sdk": "^2.1.40",
+    "divshot-api": "^1.3.0",
     "divshot-push": "^1.4.2",
-    "fs-extra": "^0.22.1",
     "glob": "^5.0.14",
+    "inquirer": "^0.9.0",
     "lodash": "^3.10.0",
     "mime": "^1.3.4",
     "mkdirp": "^0.5.1",
