--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "aws-sdk": "^2.1.40",
+    "divshot-cli": "^1.10.5",
     "divshot-push": "^1.4.2",
     "glob": "^5.0.14",
     "inquirer": "^0.9.0",
