Adds tests for s3 and divshot deployment
This adds deployments for S3 and Divshot, should be a little easier to
create tests in the future now.

This also creates a new JavaScript API module, deploy.js with a
signature of:

```js
deploy(packageJSON, deployConfig, selectedConfig, files, errback)
```

This just pulled out stuff that was in bin/deploy, making that module
much smaller.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "donejs-deploy.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha test/test.js"
   },
   "repository": {
     "type": "git",
@@ -44,5 +44,9 @@
   },
   "system": {
     "npmDependencies": []
+  },
+  "devDependencies": {
+    "mocha": "^2.3.0",
+    "nock": "^2.10.0"
   }
 }
