--- a/package.json
+++ b/package.json
@@ -32,8 +32,9 @@
   },
   "dependencies": {
     "aws-sdk": "^2.1.40",
-    "divshot-cli": "^1.10.5",
+    "divshot-cli": "^1.11.0",
     "divshot-push": "^1.4.2",
+    "firebase-tools": "^2.0.1",
     "glob": "^5.0.14",
     "inquirer": "^0.9.0",
     "lodash": "^3.10.0",
