--- a/package.json
+++ b/package.json
@@ -34,13 +34,17 @@
     "aws-sdk": "^2.1.40",
     "divshot-cli": "^1.10.5",
     "divshot-push": "^1.4.2",
+    "ftps": "^0.3.2",
     "glob": "^5.0.14",
     "inquirer": "^0.9.0",
     "lodash": "^3.10.0",
     "mime": "^1.3.4",
     "mkdirp": "^0.5.1",
     "path-parse": "^1.0.5",
-    "q": "^1.4.1"
+    "q": "^1.4.1",
+    "sftp-upload": "0.0.6",
+    "sftps": "^0.2.8",
+    "ssh2": "^0.4.11"
   },
   "system": {
     "npmDependencies": []
