--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "aws-sdk": "^2.1.40",
+    "cross-spawn-async": "^2.0.0",
     "divshot-cli": "^1.11.0",
     "divshot-push": "^1.4.2",
     "firebase-tools": "^2.0.1",
