--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "mime": "^1.3.4",
     "mkdirp": "^0.5.1",
     "path-parse": "^1.0.5",
-    "q": "^1.4.1"
+    "q": "^1.4.1",
+    "self-destruct": "^1.0.0"
   },
   "system": {
     "npmDependencies": []
