--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "deploy": "bin/deploy"
   },
   "dependencies": {
-    "aws-sdk": "^2.1.40",
+    "aws-sdk": "^2.2.33",
     "cross-spawn-async": "^2.0.0",
     "firebase-tools": "^2.0.1",
     "glob": "^5.0.14",
@@ -44,6 +44,7 @@
     "mime": "^1.3.4",
     "mkdirp": "^0.5.1",
     "path-parse": "^1.0.5",
+    "promise": "^7.1.1",
     "q": "^1.4.1",
     "self-destruct": "^1.0.0"
   },
