--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "aws-sdk": "^2.2.33",
     "cross-spawn-async": "^2.0.0",
+    "debug": "^2.2.0",
     "firebase-tools": "^2.0.1",
     "glob": "^5.0.14",
     "inquirer": "^0.9.0",
